--- a/source/_static/css/citheme.css
+++ b/source/_static/css/citheme.css
@@ -329,3 +329,18 @@ html.writer-html5 .rst-content dl[class]:not(.option-list):not(.field-list):not(
 	font-size: 9px;
 	line-height: 1;
 }
+
+
+/* -- Breakpoint for large screens (> 900px) --------- */
+@media (min-width: 900px) and (max-width: 1100px) {
+	.wy-nav-content {
+		max-width: 1620px;
+	}
+}
+
+@media (min-width: 1100px) {
+	.wy-nav-content {
+		margin: 0 auto;
+		max-width: 1620px;
+	}
+}
