--- a/source/_static/css/citheme.css
+++ b/source/_static/css/citheme.css
@@ -265,10 +265,12 @@ html.writer-html5 .rst-content dl[class]:not(.option-list):not(.field-list):not(
 
 .versionadded {
     background: #dff0d8;
+    padding: 0 5px;
 }
 
-.deprecated {
+.deprecated:not(.versionmodified) {
     background: #f2dede;
+    padding: 0 5px;
 }
 
 /* Footer ------------------------------------------------------------------- */
