search text color update

--- a/source/_static/css/citheme_dark.css
+++ b/source/_static/css/citheme_dark.css
@@ -49,6 +49,7 @@
         box-shadow: rgb(43 47 49) 0px 1px 3px inset;
         border-color: rgb(59 59 59);
         background-color: rgb(59 59 59);
+        color: #96928c;
     }
 
     .btn {
