--- a/source/_static/css/citheme_dark.css
+++ b/source/_static/css/citheme_dark.css
@@ -72,31 +72,31 @@
     }
 
     footer {
-        color: rgb(152, 143, 129);
+        color: rgb(152, 143, 129) !important;
     }
 
     .wy-nav-content {
-        background-color: #181a1b;
-        color: rgb(192, 186, 178);
+        background-color: #181a1b !important;
+        color: rgb(192, 186, 178) !important;
     }
 
     .method .sig-object, .class dt, .data dt, .attribute dt, .function dt,
     .descclassname, .descname {
         background-color: rgb(40, 43, 45) !important;
-        color: rgb(192, 186, 178);
+        color: rgb(192, 186, 178) !important;
     }
 
-    html.writer-html4 .rst-content dl:not(.docutils) > dt, html.writer-html5 .rst-content dl[class]:not(.option-list):not(.field-list):not(.footnote):not(.glossary):not(.simple) > dt {
-        color: #ccc;
+    html.writer-html4 .rst-content dl:not(.docutils) > dt, html.writer-html5 .rst-content dl[class]:not(.option-list):not(.field-list):not(.citation):not(.glossary):not(.simple) > dt {
+        color: #cccccc !important;
     }
 
-    html.writer-html4 .rst-content dl:not(.docutils) dl:not(.field-list) > dt, html.writer-html5 .rst-content dl[class]:not(.option-list):not(.field-list):not(.footnote):not(.glossary):not(.simple) dl:not(.field-list) > dt {
-        color: #96928c;
-        border-left: 3px solid #3f4547;
+    html.writer-html4 .rst-content dl:not(.docutils) dl:not(.field-list) > dt, html.writer-html5 .rst-content dl[class]:not(.option-list):not(.field-list):not(.citation):not(.glossary):not(.simple) dl:not(.field-list) > dt {
+        color: #96928c !important;
+        border-left: 3px solid #3f4547 !important;
     }
 
-    html.writer-html4 .rst-content dl:not(.docutils) .optional, html.writer-html5 .rst-content dl[class]:not(.option-list):not(.field-list):not(.footnote):not(.glossary):not(.simple) .optional {
-        color: #c0bab2;
+    html.writer-html4 .rst-content dl:not(.docutils) .optional, html.writer-html5 .rst-content dl[class]:not(.option-list):not(.field-list):not(.citation):not(.glossary):not(.simple) .optional {
+        color: #c0bab2 !important;
     }
 
     .method dt, .function .field-list dt {
@@ -104,7 +104,7 @@
     }
 
     .rst-content .toc-backref {
-        color: rgb(192, 186, 178);
+        color: rgb(192, 186, 178) !important;
     }
 
     code.literal {
@@ -117,34 +117,34 @@
     }
 
     .wy-nav-side {
-        background-color: rgb(28, 30, 31);
+        background-color: rgb(28, 30, 31) !important;
     }
 
     .wy-menu-vertical a:visited {
-        color: rgb(192, 186, 178);
+        color: rgb(192, 186, 178) !important;
     }
 
     .wy-menu-vertical li.current > a button.toctree-expand, .wy-menu-vertical li.on a button.toctree-expand {
-        color: rgb(200, 195, 188);
+        color: rgb(200, 195, 188) !important;
     }
     .wy-menu-vertical a:hover button.toctree-expand {
-        color: rgb(208, 204, 198);
+        color: rgb(208, 204, 198) !important;
     }
 
     .wy-nav-content-wrap {
-        background-color: #181a1b;
+        background-color: #181a1b !important;
     }
 
     .wy-nav-content-wrap a, .wy-nav-content-wrap a:visited {
-        color: rgb(237, 101, 54);
+        color: rgb(237, 101, 54) !important;
     }
 
     .wy-nav-content-wrap a:hover, .wy-nav-content-wrap a:active {
-        color: rgb(241, 138, 103);
+        color: rgb(241, 138, 103) !important;
     }
 
     .wy-menu-vertical a:active {
-        background-color: #b13a10;
+        background-color: #b13a10 !important;
     }
 
     .sidebar {
@@ -170,11 +170,11 @@
     }
 
     .rst-content table.docutils thead, .rst-content table.field-list thead, .wy-table thead {
-        color: rgb(192, 186, 178);
+        color: rgb(192, 186, 178) !important;
     }
 
     .wy-table thead th, .rst-content table.docutils thead th, .rst-content table.field-list thead th {
-        border: solid 2px #e1e4e5;
+        border: solid 2px #e1e4e5 !important;
     }
 
     .wy-table thead p, .rst-content table.docutils thead p, .rst-content table.field-list thead p {
@@ -182,7 +182,7 @@
     }
 
     .wy-table-odd td, .wy-table-striped tr:nth-child(2n-1) td, .rst-content table.docutils:not(.field-list) tr:nth-child(2n-1) td {
-        background-color: #343131;
+        background-color: #343131 !important;
     }
 
     /* Messages ----------------------------------------------------------------- */
@@ -192,75 +192,75 @@
     }
 
     .rst-content code.literal, .rst-content tt.literal {
-        color: rgb(233, 88, 73);
+        color: rgb(233, 88, 73) !important;
     }
 
     .rst-content .note .admonition-title, .rst-content .note .wy-alert-title, .rst-content .seealso .admonition-title, .rst-content .seealso .wy-alert-title, .rst-content .wy-alert-info.admonition-todo .admonition-title, .rst-content .wy-alert-info.admonition-todo .wy-alert-title, .rst-content .wy-alert-info.admonition .admonition-title, .rst-content .wy-alert-info.admonition .wy-alert-title, .rst-content .wy-alert-info.attention .admonition-title, .rst-content .wy-alert-info.attention .wy-alert-title, .rst-content .wy-alert-info.caution .admonition-title, .rst-content .wy-alert-info.caution .wy-alert-title, .rst-content .wy-alert-info.danger .admonition-title, .rst-content .wy-alert-info.danger .wy-alert-title, .rst-content .wy-alert-info.error .admonition-title, .rst-content .wy-alert-info.error .wy-alert-title, .rst-content .wy-alert-info.hint .admonition-title, .rst-content .wy-alert-info.hint .wy-alert-title, .rst-content .wy-alert-info.important .admonition-title, .rst-content .wy-alert-info.important .wy-alert-title, .rst-content .wy-alert-info.tip .admonition-title, .rst-content .wy-alert-info.tip .wy-alert-title, .rst-content .wy-alert-info.warning .admonition-title, .rst-content .wy-alert-info.warning .wy-alert-title, .rst-content .wy-alert.wy-alert-info .admonition-title, .wy-alert.wy-alert-info .rst-content .admonition-title, .wy-alert.wy-alert-info .wy-alert-title {
-        background: #3a6d8e;
-        color: #cdcdcd;
+        background: #3a6d8e !important;
+        color: #cdcdcd !important;
     }
 
     .rst-content .admonition-todo .admonition-title, .rst-content .admonition-todo .wy-alert-title, .rst-content .attention .admonition-title, .rst-content .attention .wy-alert-title, .rst-content .caution .admonition-title, .rst-content .caution .wy-alert-title, .rst-content .warning .admonition-title, .rst-content .warning .wy-alert-title, .rst-content .wy-alert-warning.admonition .admonition-title, .rst-content .wy-alert-warning.admonition .wy-alert-title, .rst-content .wy-alert-warning.danger .admonition-title, .rst-content .wy-alert-warning.danger .wy-alert-title, .rst-content .wy-alert-warning.error .admonition-title, .rst-content .wy-alert-warning.error .wy-alert-title, .rst-content .wy-alert-warning.hint .admonition-title, .rst-content .wy-alert-warning.hint .wy-alert-title, .rst-content .wy-alert-warning.important .admonition-title, .rst-content .wy-alert-warning.important .wy-alert-title, .rst-content .wy-alert-warning.note .admonition-title, .rst-content .wy-alert-warning.note .wy-alert-title, .rst-content .wy-alert-warning.seealso .admonition-title, .rst-content .wy-alert-warning.seealso .wy-alert-title, .rst-content .wy-alert-warning.tip .admonition-title, .rst-content .wy-alert-warning.tip .wy-alert-title, .rst-content .wy-alert.wy-alert-warning .admonition-title, .wy-alert.wy-alert-warning .rst-content .admonition-title, .wy-alert.wy-alert-warning .wy-alert-title {
-        background: #b96a26;
-        color: #cdcdcd;
+        background: #b96a26 !important;
+        color: #cdcdcd !important;
     }
 
     /* Content ----------------------------------------------------------------- */
 
     .rst-content .important .admonition-title {
-        background: #b04926;
-        color: #cdcdcd;
+        background: #b04926 !important;
+        color: #cdcdcd !important;
     }
 
     .rst-content div[class^="highlight"], .rst-content pre.literal-block {
-        border: 1px solid rgb(63, 69, 71);
+        border: 1px solid rgb(63, 69, 71) !important;
     }
 
-    html.writer-html4 .rst-content dl:not(.docutils) > dt, html.writer-html5 .rst-content dl[class]:not(.option-list):not(.field-list):not(.footnote):not(.glossary):not(.simple) > dt {
-        border-top: solid 3px #b13a10;
+    html.writer-html4 .rst-content dl:not(.docutils) > dt, html.writer-html5 .rst-content dl[class]:not(.option-list):not(.field-list):not(.citation):not(.glossary):not(.simple) > dt {
+        border-top: solid 3px #b13a10 !important;
     }
 
-    html.writer-html4 .rst-content dl:not(.docutils) > dt, html.writer-html5 .rst-content dl[class]:not(.option-list):not(.field-list):not(.footnote):not(.glossary):not(.simple) > dt {
-        background: #282b2d;
+    html.writer-html4 .rst-content dl:not(.docutils) > dt, html.writer-html5 .rst-content dl[class]:not(.option-list):not(.field-list):not(.citation):not(.glossary):not(.simple) > dt {
+        background: #282b2d !important;
     }
 
     /* Side Menu ---------------------------------------------------------------- */
 
     .wy-menu-vertical li.current {
-        background: rgb(40, 43, 45);
+        background: rgb(40, 43, 45) !important;
     }
 
     .wy-menu-vertical li.current > a, .wy-menu-vertical li.on a, .wy-menu-vertical li.current > a:hover, .wy-menu-vertical li.on a:hover {
-        background-color: rgb(24, 26, 27);
-        color: rgb(192, 186, 178)
+        background-color: rgb(24, 26, 27) !important;
+        color: rgb(192, 186, 178) !important;
     }
 
     .wy-menu-vertical li.toctree-l1.current > a {
-        border-bottom-color: rgb(63, 69, 71);
-        border-top-color: rgb(63, 69, 71);
+        border-bottom-color: rgb(63, 69, 71) !important;
+        border-top-color: rgb(63, 69, 71) !important;
 
     }
 
     .wy-menu-vertical li.current a {
-        border-right-color: rgb(63, 69, 71);
+        border-right-color: rgb(63, 69, 71) !important;
     }
 
     .wy-menu-vertical li.toctree-l2.current > a, .wy-menu-vertical li.toctree-l2.current li.toctree-l3 > a,
     .wy-menu-vertical li.toctree-l2.current:hover > a, .wy-menu-vertical li.toctree-l2.current li.toctree-l3:hover > a {
-        background: #3c3c3c;
-        border-right-color: rgb(63, 69, 71);
+        background: #3c3c3c !important;
+        border-right-color: rgb(63, 69, 71) !important;
     }
 
     .wy-menu-vertical li.toctree-l2:hover > a, .wy-menu-vertical li.toctree-l2.current li.toctree-l3:hover > a {
-        background: #1c2020;
+        background: #1c2020 !important;
     }
 
     .wy-menu-vertical li.toctree-l2 a, .wy-menu-vertical li.toctree-l3 a, .wy-menu-vertical li.toctree-l4 a, .wy-menu-vertical li.toctree-l5 a, .wy-menu-vertical li.toctree-l6 a, .wy-menu-vertical li.toctree-l7 a, .wy-menu-vertical li.toctree-l8 a, .wy-menu-vertical li.toctree-l9 a, .wy-menu-vertical li.toctree-l10 a {
-        color: rgb(192, 186, 178);
+        color: rgb(192, 186, 178) !important;
     }
 
     .wy-menu-vertical li code {
-        color: rgb(237, 101, 54);
+        color: rgb(237, 101, 54) !important;
     }
 
     .wy-menu-vertical .xref {
